@@ -1,6 +1,7 @@
 Changes for 2.0.12rc3
 
 Bug fixes:
+........S. [ZBX-8181] fixed possible entering of "history syncer" process in an eternal loop when processing IT services (dimir)
 
 --------------------------------------------------------------------------------
 Changes for 2.0.12rc2
